# fcount

./: .gitignore  ChangeLog  Makefile  Makefile.am  README.md  configure.ac
.github/workflows/: c-cpp.yml
man/: fcount.1
src/: darray.c  fc_funcs.c  fc_funcs.h  fcount  fcount.c  fcount.h
src/lcthw/: darray.h
src/util/: darray.c  fc_funcs.c
tests/: darray_tests.c  minunit.h
